# KB_Smart_Bank

./: README.md  main.py  pyproject.toml  streamlit_app.py
sql/: seed.sql
src/api/v1/agents/: agent.py  rag_graph.mmd
src/api/v1/routes/: query_route.py  upload_route.py
src/api/v1/schemas/: query_schema.py
src/api/v1/services/: query_service.py
src/api/v1/tools/: fts_search_tool.py  hybrid_search_tool.py  vector_search_tool.py
src/core/: check_db.py  db.py
src/ingestion/: docling_parser.py  ingestion.py
